--- a/23120057_main.html
+++ b/23120057_main.html
@@ -85,8 +85,49 @@
                     </div>
                 </div>
 
+                <!-- Second container -->
+                <div class="container-1">
+                    <div class="container-header">
+                        <div class="container-header-left">
+                            <h2>Drag & Drop</h2>
+                        </div>
+                        <div class="container-header-middle">
+                            <div class="custom-select">
+                                <select>
+                                    <option>Mouse</option>
+                                    <option>Mouse</option>
+                                    <option>Mouse</option>
+                                    <option>Mouse</option>
+                                    <option>Mouse</option>
+                                </select>
+                            </div>
+                            <button>Add new</button>
+                        </div>
+                        <div class="container-header-right">
+                        </div>
+                    </div>
+
+                    <div class="container-content">
+                        <p style="padding: 1em; font-size: 1.5em">
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
 
+        <!-- Footer -->
+        <div class="footer">
+            <p>Copyright © TanLocLouis </p>
+            <ul class="footer-menu">
+                <li>Menu 1</li>
+                <li>Menu 2</li>
+                <li>Menu 3</li>
+                <li>Menu 4</li>
+                <li>Menu 5</li>
+            </ul>
+        </div>
     </div>
 </body>
         <!-- Scripts -->
