--- a/23120057_main.html
+++ b/23120057_main.html
@@ -66,8 +66,8 @@
                         <div class="container-header-middle">
                             <input id="search-input" placeholder="Enter text here"></input>
                             <button id="btn-highlight">Hightlight</button>
-                            <button id="btn-delete">Delete</button>
-                            <button id="btn-reset">Reset</button>
+                            <button>Delete</button>
+                            <button>Reset</button>
                         </div>
                         <div class="container-header-right">
                             <label>Sample text</label>
