--- a/23120057_main.html
+++ b/23120057_main.html
@@ -66,7 +66,7 @@
                         <div class="container-header-middle">
                             <input id="search-input" placeholder="Enter text here"></input>
                             <button id="btn-highlight">Hightlight</button>
-                            <button>Delete</button>
+                            <button id="btn-delete">Delete</button>
                             <button>Reset</button>
                         </div>
                         <div class="container-header-right">
