--- a/23120057_main.html
+++ b/23120057_main.html
@@ -67,7 +67,7 @@
                             <input id="search-input" placeholder="Enter text here"></input>
                             <button id="btn-highlight">Hightlight</button>
                             <button id="btn-delete">Delete</button>
-                            <button>Reset</button>
+                            <button id="btn-reset">Reset</button>
                         </div>
                         <div class="container-header-right">
                             <label>Sample text</label>
