change title in sidebar

--- a/23120057_main.html
+++ b/23120057_main.html
@@ -29,7 +29,7 @@
         <div class="main-container">
             <div class="side">
                 <div class="side-section">
-                    <h2 class="side-section-title">Instructions</h2>
+                    <h2 class="side-section-title">News 01</h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
                     magnam ab? Sequi amet a quisquam, error delectus saepe 
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="side-section">
-                    <h2 class="side-section-title">Instructions</h2>
+                    <h2 class="side-section-title">News 02</h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
                     magnam ab? Sequi amet a quisquam, error delectus saepe 
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="side-section">
-                    <h2 class="side-section-title">Instructions</h2>
+                    <h2 class="side-section-title">News 03</h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
                     magnam ab? Sequi amet a quisquam, error delectus saepe 
