add more item in sidebar

--- a/23120057_main.html
+++ b/23120057_main.html
@@ -54,6 +54,15 @@
                     quia laborum illo natus.
                     </p>
                 </div>
+
+                <div class="side-section">
+                    <h2 class="side-section-title">News 04</h2>
+                    <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Officiis quaerat maxime vitae nam optio corporis molestias cum, 
+                    magnam ab? Sequi amet a quisquam, error delectus saepe 
+                    quia laborum illo natus.
+                    </p>
+                </div>
             </div>
 
             <!-- First container -->
