update Highlight color in realtime

--- a/23120057_main.html
+++ b/23120057_main.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="container-header-middle">
                             <input id="search-input" placeholder="Enter text here"></input>
-                            <button id="btn-highlight">Hightlight</button>
+                            <button id="btn-hightlight">Hightlight</button>
                             <button id="btn-delete">Delete</button>
                             <button id="btn-reset">Reset</button>
                         </div>
