add id for Sections & JQuery libs

--- a/23120057_main.html
+++ b/23120057_main.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="23120057_main.css"></link>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 </head>
 <body>
     <div class="main-page">
@@ -28,7 +31,7 @@
         <!-- Container Section -->
         <div class="main-container">
             <div class="side">
-                <div class="side-section">
+                <div class="side-section" id="side-section-1">
                     <h2 class="side-section-title">News 01</h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
@@ -37,7 +40,7 @@
                     </p>
                 </div>
 
-                <div class="side-section">
+                <div class="side-section" id="side-section-2">
                     <h2 class="side-section-title">News 02</h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
@@ -46,7 +49,7 @@
                     </p>
                 </div>
 
-                <div class="side-section">
+                <div class="side-section" id="side-section-3">
                     <h2 class="side-section-title">News 03</h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
@@ -56,7 +59,7 @@
                 </div>
 
                 <div class="side-section">
-                    <h2 class="side-section-title">News 04</h2>
+                    <h2 class="side-section-title" id="side-section-4">News 04</h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
                     magnam ab? Sequi amet a quisquam, error delectus saepe 
@@ -159,6 +162,5 @@
     </div>
 </body>
         <!-- Scripts -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="script.js"></script>
 </html>
