crate Drag & Drop layout

--- a/23120057_main.html
+++ b/23120057_main.html
@@ -138,9 +138,18 @@
                         </div>
                     </div>
 
-                    <div class="container-content">
-                        <p style="padding: 1em; font-size: 1.5em">
-                        </p>
+                    <div class="container-drag-drop">
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
+                        <div style="background-color: red;">h</div>
                     </div>
                 </div>
             </div>
