add item into grid when click Add new

--- a/23120057_main.html
+++ b/23120057_main.html
@@ -125,11 +125,30 @@
                         <div class="container-header-middle">
                             <div class="custom-select">
                                 <select>
-                                    <option>Mouse</option>
-                                    <option>Mouse</option>
-                                    <option>Mouse</option>
-                                    <option>Mouse</option>
-                                    <option>Mouse</option>
+                                    <option>
+                                        <div class="custom-select-item" id="custom-select-item-1">🐭</div>
+                                        <label>Mouse</label>
+                                    </option>
+                                    <option>
+                                        <div class="custom-select-item" id="custom-select-item-1">🐕</div>
+                                        <label>Dog</label>
+                                    </option>
+                                    <option>
+                                        <div class="custom-select-item" id="custom-select-item-1">😺</div>
+                                        <label>Cat</label>
+                                    </option>
+                                    <option>
+                                        <div class="custom-select-item" id="custom-select-item-1">🦅</div>
+                                        <label>Eagle</label>
+                                    </option>
+                                    <option>
+                                        <div class="custom-select-item" id="custom-select-item-1">🐄</div>
+                                        <label>Cow</label>
+                                    </option>
+                                    <option>
+                                        <div class="custom-select-item" id="custom-select-item-1">🐎</div>
+                                        <label>Horse</label>
+                                    </option>
                                 </select>
                             </div>
                             <button>Add new</button>
@@ -139,17 +158,6 @@
                     </div>
 
                     <div class="container-drag-drop">
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
-                        <div style="background-color: red;">h</div>
                     </div>
                 </div>
             </div>
