sync stated list & fix sidebar

--- a/23120057_main.html
+++ b/23120057_main.html
@@ -32,7 +32,11 @@
         <div class="main-container">
             <div class="side">
                 <div class="side-section" id="side-section-1">
-                    <h2 class="side-section-title">News 01</h2>
+                    <h2 class="side-section-title">
+                        <span class="side-section-arrow"></span>
+                        News 01
+                        <span class="side-section-drag"></span>
+                    </h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
                     magnam ab? Sequi amet a quisquam, error delectus saepe 
@@ -41,7 +45,11 @@
                 </div>
 
                 <div class="side-section" id="side-section-2">
-                    <h2 class="side-section-title">News 02</h2>
+                    <h2 class="side-section-title">
+                        <span class="side-section-arrow"></span>
+                        News 02
+                        <span class="side-section-drag"></span>
+                    </h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
                     magnam ab? Sequi amet a quisquam, error delectus saepe 
@@ -50,7 +58,11 @@
                 </div>
 
                 <div class="side-section" id="side-section-3">
-                    <h2 class="side-section-title">News 03</h2>
+                    <h2 class="side-section-title">
+                        <span class="side-section-arrow"></span>
+                        News 03
+                        <span class="side-section-drag"></span>
+                    </h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
                     magnam ab? Sequi amet a quisquam, error delectus saepe 
@@ -59,7 +71,11 @@
                 </div>
 
                 <div class="side-section">
-                    <h2 class="side-section-title" id="side-section-4">News 04</h2>
+                    <h2 class="side-section-title" id="side-section-4">
+                        <span class="side-section-arrow"></span>
+                        News 04
+                        <span class="side-section-drag"></span>
+                    </h2>
                     <p style="padding: 0.5em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Officiis quaerat maxime vitae nam optio corporis molestias cum, 
                     magnam ab? Sequi amet a quisquam, error delectus saepe 
@@ -124,7 +140,7 @@
                         </div>
                         <div class="container-header-middle">
                             <div class="custom-select">
-                                <select>
+                                <select class="custom-select-ul">
                                     <option>
                                         <div class="custom-select-item" id="custom-select-item-1">🐭</div>
                                         <label>Mouse</label>
